--- a/build-prjGestionCC_Qt-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/Makefile
+++ b/build-prjGestionCC_Qt-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/Makefile
@@ -250,6 +250,7 @@ Makefile: ../prjGestionCC_Qt/prjGestionCC_Qt.pro C:/Qt/5.15.2/mingw81_64/mkspecs
 		../prjGestionCC_Qt/prjGestionCC_Qt.pro \
 		C:/Qt/5.15.2/mingw81_64/lib/Qt5Widgets.prl \
 		C:/Qt/5.15.2/mingw81_64/lib/Qt5Gui.prl \
+		C:/Qt/5.15.2/mingw81_64/lib/Qt5Sql.prl \
 		C:/Qt/5.15.2/mingw81_64/lib/Qt5Core.prl \
 		C:/Qt/5.15.2/mingw81_64/lib/qtmain.prl \
 		C:/Qt/5.15.2/mingw81_64/mkspecs/features/build_pass.prf
@@ -434,6 +435,7 @@ C:/Qt/5.15.2/mingw81_64/mkspecs/features/lex.prf:
 ../prjGestionCC_Qt/prjGestionCC_Qt.pro:
 C:/Qt/5.15.2/mingw81_64/lib/Qt5Widgets.prl:
 C:/Qt/5.15.2/mingw81_64/lib/Qt5Gui.prl:
+C:/Qt/5.15.2/mingw81_64/lib/Qt5Sql.prl:
 C:/Qt/5.15.2/mingw81_64/lib/Qt5Core.prl:
 C:/Qt/5.15.2/mingw81_64/lib/qtmain.prl:
 C:/Qt/5.15.2/mingw81_64/mkspecs/features/build_pass.prf:
