--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
-\build-prjGestionCC_Qt-Desktop_Qt_5_15_2_MinGW_64_bit-Debug\debug
-\build-prjGestionCC_Qt-Desktop_Qt_5_15_2_MinGW_64_bit-Debug\release
+prjGestionCC_Qt\debug
+prjGestionCC_Qt\release
